--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
     subtitle: |-
       A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
       AND RELEASED UNDER THE CREATIVE COMMONS USED BY HADRIEN PISTRE.
-    title: Hi, my name is Hadrien Pistre. I am an MFA 2022 student. Test.
+    title: Hi, my name is Hadrien Pistre. I am an MFA 2022 student. Test. test.
   blog: {}
   contact: 
     address:
@@ -81,10 +81,10 @@ params:
   tiles:
     enable: yes
     showcase:
-      - image: "projects/project1_image.png""
-        subtitle: "Alcohol consumption, CPI evolution and German election polls""
-        title: "Data wrangling""
-        url: "projects/project1""
+      - image: projects/project1_image.png"
+        subtitle: Alcohol consumption, CPI evolution and German election polls
+        title: Data wrangling
+        url: projects/project1
       - image: pic02.jpg
         subtitle: Temperatures evolution, Joe Biden approval rating, TfL bikes usage and CPI by component
         title: Data tidying
