--- a/config.yaml
+++ b/config.yaml
@@ -86,7 +86,7 @@ params:
         title: Data wrangling
         url: projects/love_on_the_beat
       - image: pic21.jpg
-        subtitle: Temperatures evolution, Joe Biden approval rating, TfL bikes usage and CPI by component
+        subtitle: Synthesis of election polls for the 2021 German election
         title: Data tidying
         url: projects/project_1
       - image: pic03.jpg
