--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
     subtitle: |-
       A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
       AND RELEASED UNDER THE CREATIVE COMMONS USED BY HADRIEN PISTRE.
-    title: Hi, my name is Hadrien Pistre. I am an MFA 2022 student. Test. test.
+    title: Hi, my name is Hadrien Pistre. I am an MFA 2022 student.
   blog: {}
   contact: 
     address:
@@ -84,7 +84,7 @@ params:
       - image: pic_lbs.jpg
         subtitle: What has been my journey so far
         title: About me
-        url: projects/love_on_the_beat
+        url: blogs/about_me
       - image: pic_project_1.jpg
         subtitle: Study of the yield curves for US treasuries since 1960
         title: Yield curve inversion
@@ -108,6 +108,6 @@ params:
   two:
     buttonText: Get Started
     enable: yes
-    subtitle: "Hello, I am Hadrien! I come from Paris, France, where I did most of my education, as well as my undergraduate studies in economics. Afterwards, I did a Masters in Management in Bordeaux, and was involved in my school’s student-led consultancy. After some internships in financial controlling and audit, I decided to join the MFA to further my knowledge in finance. I like music, especially funk, soul, and jazz. I also do a lot of sport and like very much physical exercise. Finally, I enjoy reading about politics and economics. Do not hesitate to reach out!"
+    subtitle: "Hello and welcome on my website! Please find some information about myself, as well as a few R projects I have been working on with some of my fellow students."
     title: Welcome on my website!
     url: blogs
