--- a/config.yaml
+++ b/config.yaml
@@ -61,7 +61,7 @@ params:
   name: Your name
   navigation:
     button1:
-      - name: Get Started
+      - name: Blogs
         url: blogs
     button2:
       #- name: Log In
@@ -69,8 +69,8 @@ params:
     links:
       - name: Home
         url: '#'
-      - name: Blogs
-        url: blogs
+      # - name: Blogs
+      #  url: blogs
       #- name: Generic Blog
       #  url: blogs/ipsum
       #- name: Elements
