--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
     subtitle: |-
       A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
       AND RELEASED UNDER THE CREATIVE COMMONS USED BY HADRIEN PISTRE.
-    title: Hi, my name is Hadrien Pistre. I am an MFA 2022 student.
+    title: Hi, my name is Hadrien Pistre. I am an MFA 2022 student at London Business School.
   blog: {}
   contact: 
     address:
