--- a/config.yaml
+++ b/config.yaml
@@ -61,7 +61,7 @@ params:
   name: Your name
   navigation:
     button1:
-      - name: Blogs
+      - name: Blog
         url: blogs
     button2:
       #- name: Log In
@@ -114,7 +114,7 @@ params:
         title: Financial Times - Article
         url: https://www.ft.com/content/5da38637-292f-4c2f-ae48-8e0c74b6014c   
   two:
-    buttonText: Go to Blogs
+    buttonText: Go to Blog
     enable: yes
     subtitle: "Hello and welcome on my website! Please find some information about me, my interests as well as a few R projects I have been working on with some of my fellow students."
     title: Welcome on my website!
